--- a/project001/index.html
+++ b/project001/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Form | CodingNepal</title>
-    <!-- These links (FontAwesome & Goggle) are used for Icons-->
+    <!-- These links (FontAwesome & Google) are used for Icons -->
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -19,35 +20,32 @@
       <header>Send Us a Message</header>
       <form action="#">
         <div class="dbl-field">
-            <div class="field">
-              <input type="text" placeholder="Enter your name" />
-              <i class="fas fa-user"></i>
-            </div>
           <div class="field">
-            <input type="text" placeholder="Enter your e-mail">
-            <i class="fas fa-envelope"> </i>
-
-          <div class="dbl-field">
-            <div class="field">
-              <input type="text" placeholder="Enter your phone">
-              <i class="fas fa-phone-alt"></i>
-            </div>
-            <div class="field">
-              <input type="text" placeholder="Enter your website">
-              <i class="fas fa-globe"></i>
-            </div>
+            <input type="text" placeholder="Enter your name" />
+            <i class="fas fa-user"></i>
           </div>
-          <div class="message">
-            <textarea placeholder="Write your message"></textarea>
-            <i class="material-icons">message</i>
-          </div>
-          <div class="button-area">
-            <button type="submit">Send Message</button>
-            <span>Sending your message...</span>
+          <div class="field">
+            <input type="text" placeholder="Enter your e-mail" />
+            <i class="fas fa-envelope"></i>
           </div>
         </div>
+        <div class="dbl-field">
+          <div class="field">
+            <input type="text" placeholder="Enter your phone" />
+            <i class="fas fa-phone-alt"></i>
           </div>
+          <div class="field">
+            <input type="text" placeholder="Enter your website" />
+            <i class="fas fa-globe"></i>
           </div>
+        </div>
+        <div class="message">
+          <textarea placeholder="Write your message"></textarea>
+          <i class="material-icons">message</i>
+        </div>
+        <div class="button-area">
+          <button type="submit">Send Message</button>
+          <span>Sending your message...</span>
         </div>
       </form>
     </div>
