new things added

--- a/project001/index.html
+++ b/project001/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="wrapper">
       <header>Send Us a Message</header>
-      <form action="#">
+      <form action="message.php" method="POST">
         <div class="dbl-field">
           <div class="field">
             <input type="text" name="name" placeholder="Enter your name" />
